--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon --config nodemon.json",
     "build": "tsc",
     "start": "node dist/app.js",
     "test": "jest"
